grid: fix cropped date-selector

--- a/src/styles/grid/index.css
+++ b/src/styles/grid/index.css
@@ -24,7 +24,6 @@
   flex: 1 0 100%;
   align-content: space-between;
   margin-left: calc(-1 * var(--grid-column-spacing));
-  overflow-x: hidden;
 }
 
 .row:last-child {
